syntax = "proto3";

package runtime.examples.custom_extension;

import "google/protobuf/any.proto";

option go_package = "./custom_extension/conf;conf";

// Middleware message using google.protobuf.Any.
// This approach is more complex when loading from a config file without a '@type' field.
message MiddlewareAny {
  string name = 1;
  string type = 2;

  // The 'customize' field expects a packed message with a type URL.
  // Loading a plain YAML/JSON object into this directly will fail.
  optional google.protobuf.Any customize = 100;
}
