syntax = "proto3";

package runtime.examples.custom_extension;

import "google/protobuf/struct.proto";

option go_package = "./custom_extension/conf;conf";

// CustomAuthConfig is the strongly-typed representation of our custom middleware config.
// We will convert the generic Struct into this specific type in our Go code.
message CustomAuthConfig {
  // The policy definition, e.g., using Casbin model.
  string policy = 1;
  // The required scope for the endpoint.
  string required_scope = 2;
}

// Custom configuration message
message CustomConfig {
  string custom_field = 1;
  int32 custom_number = 2;
  repeated string items = 3;

  message NestedConfig {
    bool enabled = 1;
    string name = 2;
  }

  NestedConfig nested = 4;
}

// Application configuration
message ApplicationConfig {
  bool enabled = 1;
  string name = 2;
  optional google.protobuf.Struct customize_config = 3 [json_name = "customize_config"];
}
